# kSDR

./: .gitignore  .gitmodules  CMakeLists.txt  COMPortHandler.cpp  ComPortHandler.h  DataReceiver.cpp  DataReceiver.h  Decimator.cpp  Decimator.h  README.md  RgbCalculator.cpp  RgbCalculator.h  SSB.cpp  chucha.xml  config.xml  config1.xml  config2.xml  imgui.ini  kSDR.rc  kSDR.sln  kSDR.vcxproj  kSDR.vcxproj.filters  resource.h
chucha/: AudioFFT.cpp  ComPort.cpp  ComPort.h  RTLDevice.cpp  RTLDevice.h  RTLDeviceReaderThread.cpp  SoundReaderThread.cpp  SoundReaderThread.h  Utils.cpp  Utils.h
lib/: glfw3.lib  hackrf.lib  libfftw3-3.lib  portaudio_static_x86.lib  rtlsdr.lib  sdrplay_api.lib
libraries/: CMakeLists.txt
libraries/comport/: CMakeLists.txt  rs232.c  rs232.h
libraries/fftw/: CMakeLists.txt
libraries/fftw/include/fftw/: fftw3.h
libraries/hackrf/: CMakeLists.txt
libraries/imgui/: CMakeLists.txt
libraries/rtlsdr/: CMakeLists.txt
libraries/rtlsdr/include/: rtl-sdr.h
libraries/sdrplay/: CMakeLists.txt
libraries/stb/: CMakeLists.txt
libraries/windows-x64/: CMakeLists.txt
libraries/windows-x64/fftw3/: CMakeLists.txt  libfftw3-3.lib
libraries/windows-x64/hackrf/: CMakeLists.txt  hackrf.lib
libraries/windows-x64/libusb/: CMakeLists.txt  libusb-1.0.lib
libraries/windows-x64/pthread/: CMakeLists.txt  pthreadVC2.lib
libraries/windows-x64/rtlsdr/: CMakeLists.txt  rtlsdr.lib
libraries/windows-x64/sdrplay/: CMakeLists.txt  sdrplay_api.lib
old_src/: AudioFFT.h  CircleBuffer.h  FFT.cpp  FFT.h  FFT2.cpp  FFT2.h  Hackrf.cpp  RTLDeviceReaderThread.h  imgui.ini
resources/: config.xml  imgui.ini
source/: AGC.cpp  Average.h  CPU.cpp  CPU.h  CircleBuffer.h  CircleBufferNew.h  CircleBufferReaderThread.cpp  CircleBufferWriterThread.cpp  CircleBufferWriterThread.h  ComplexSignal.cpp  Config.cpp  Config.h  CosOscillator.cpp  DCRemove.cpp  Delay.h  Device.cpp  Display.cpp  Environment.cpp  Environment.h  FFTData.cpp  FFTSpectreHandler.cpp  FFTSpectreHandler.h  FIR.cpp  FastMath.cpp  Filter.cpp  FirFilter.cpp  FirFilter.h  FlowingFFTSpectre.cpp  FlowingFFTSpectre.h  HilbertTransform.cpp  HilbertTransform.h  KalmanFilter.cpp  KalmanFilter.h  ListSetting.cpp  MemoryRecordUserInterface.cpp  Oscillator.cpp  Oscillator.h  PolyPhaseFilter.cpp  PolyPhaseFilter.h  RSP1.cpp  (+26 more)
source/Device/: DeviceController.cpp  DeviceInterface.cpp  DeviceN.cpp  HackRFDevice.h  RTLDevice.cpp  RTLInterface.cpp
source/Spectre/: FFTData.cpp
source/device/: DeviceController.cpp  DeviceInterface.cpp  DeviceN.cpp  HackRFDevice.cpp  HackRFInterface.cpp  RSPDevice.cpp  RSPInterface.cpp  RTLDevice.cpp  RTLInterface.cpp
source/include/: Buffer.h  CPU.h  CircleBufferNew.h  CircleBufferReaderThread.h  CircleBufferWriterThread.h  ColoredSpectreBG.h  Config.h  CosOscillator.h  DCRemove.h  DataReceiver.h  Display.h  Env.h  Environment.h  FFTData.h  FFTSpectreHandler.h  FIR.h  FMDemodulator.h  FastMath.h  Filter.h  FlowingFFTSpectre.h  HilbertTransform.h  KalmanFilter.h  ListSetting.h  MemoryRecordUserInterface.h  Mixer.h  MyThread.h  Oscillator.h  PolyPhaseFilter.h  RSP1.h  ReceiverLogic.h  ReceiverRegionInterface.h  RgbCalculator.h  SMeter.h  Semaphore.h  SinOscillator.h  SoundCard.h  SoundProcessorThread.h  SoundReaderThread.h  Spectre.h  SpectreWindowData.h  (+6 more)
source/include/device/: DeviceController.h  DeviceInterface.h  DeviceN.h  HackRFDevice.h  HackRFInterface.h  RSPDevice.h  RTLDevice.h
src/: AGC.cpp  AGC.h  ALC.cpp  ALC.h  AM.cpp  AM.h  Average.h  COMPortHandler.cpp  CPU.cpp  CPU.h  CW.h  CircleBuffer.cpp  CircleBuffer.h  CircleBufferNew.h  CircleBufferReaderThread.cpp  CircleBufferReaderThread.h  CircleBufferWriterThread.cpp  CircleBufferWriterThread.h  ColoredSpectreBG.cpp  ComPortHandler.h  ComplexOscillator.cpp  ComplexOscillator.h  ComplexSignal.cpp  ComplexSignal.h  Config.cpp  Config.h  CosOscillator.cpp  CosOscillator.h  DCRemove.cpp  DCRemove.h  Delay.cpp  Delay.h  Device.cpp  Device.h  Display.cpp  Display.h  Env.h  Environment.cpp  Environment.h  FFTSpectreHandler.cpp  (+88 more)
src/Compressor/: SimpleCompProcess.inl
src/Device/: DeviceController.cpp  DeviceController.h  DeviceInterface.h  DeviceN.cpp  DeviceN.h  HackRFDevice.cpp  HackRFDevice.h  HackRFInterface.cpp  HackRFInterface.h  RSPDevice.cpp  RSPDevice.h  RSPInterface.cpp  RSPInterface.h  RTLDevice.cpp  RTLDevice.h  RTLInterface.h  SoundCardDevice.h  SoundCardInterface.h
src/FastFir/: jfastfir.cpp  jfastfir.h
src/Spectre/: FFTData.cpp  FFTData.h
src/Thread/: MyThread.cpp  MyThread.h
src/Window/: WindowHandler.h
src/imgui/: imgui_demo.cpp
src/impl/: win.cc
src/impl/list_ports/: list_ports_win.cc
src/serial/: serial.h
src/serial/impl/: win.h
